# heroflix

./: .gitignore  pyproject.toml
core/migrations/: 0002_remove_movie_descripion_movie_description_and_more.py
django_netflix/: settings.py
static/: style.css
templates/: index.html
templates/partials/: navbar.html
