[tool.poetry]
name = "heroflix"
version = "0.1.0"
description = ""
authors = ["Magno Matos <magnomatos822@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
django-allauth = "^0.51.0"
gunicorn = "^20.1.0"
whitenoise = "^6.2.0"
dj-database-url = "^1.0.0"
psycopg2 = "^2.9.5"
Pillow = "^9.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
